Fix full-width stretch

--- a/src/resources/postcss/tickets-registration-page.pcss
+++ b/src/resources/postcss/tickets-registration-page.pcss
@@ -42,6 +42,12 @@ body.page-tribe-attendee-registration {
 		}
 	}
 
+	.tribe-tickets__registration {
+		@media(--viewport-medium) {
+			margin: auto auto;
+			max-width: 960px;
+		}
+	}
 }
 
 .tribe-common {
