--- a/src/resources/postcss/tickets.pcss
+++ b/src/resources/postcss/tickets.pcss
@@ -26,8 +26,7 @@
 	}
 }
 
- .tribe-common,
- .entry .entry-content .tribe-common {
+ .tribe-common {
 
 	 .tribe-tickets__title {
 		 color: var(--color-text-primary);
@@ -782,7 +781,7 @@
 /*
 	Modal-cart specific styles
 */
-.entry .entry-content .tribe-common.tribe-modal__wrapper--ar {
+.tribe-common.tribe-modal__wrapper--ar {
 	border-radius: 0;
 	max-width: 100vw;
 	padding: var(--spacer-3) var(--spacer-5);
